# orb_slam2-CARLA

./: CMakeLists.txt  README.md  package.xml
config/: objects.json
launch/: slam_launch.py
src/: carla.yaml  stereo-node.cpp
